# mcp-server-qdrant

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: pypi-publish.yaml  pytest.yaml
src/mcp_server_qdrant/: __init__.py  custom_server.py  helper.py  main.py  mcp_server.py  qdrant.py  server.py  settings.py
src/mcp_server_qdrant/embeddings/: __init__.py  base.py  factory.py  fastembed.py
src/mcp_server_qdrant/handlers/: decorators.py
tests/: test_config.py  test_custom_server.py  test_fastembed_integration.py  test_qdrant_integration.py  test_settings.py
